--- a/OpenGL_Setup/OpenGL_Setup.vcxproj
+++ b/OpenGL_Setup/OpenGL_Setup.vcxproj
@@ -135,7 +135,7 @@
   <ItemGroup>
     <ClCompile Include="lib\glad.c" />
     <ClCompile Include="lib\stb_image.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="modelScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="3rdParty\lib\assimp-vc143-mtd.lib" />
@@ -229,6 +229,7 @@
     <ClInclude Include="3rdParty\include\GLFW\glfw3native.h" />
     <ClInclude Include="3rdParty\include\KHR\khrplatform.h" />
     <ClInclude Include="include\Camera.h" />
+    <ClInclude Include="include\Entity.h" />
     <ClInclude Include="include\Mesh.h" />
     <ClInclude Include="include\Model.h" />
     <ClInclude Include="include\Scene.h" />
